<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_delivery">

    <fragment
        android:id="@+id/navigation_delivery"
        android:name="com.lfsolutions.retail.ui.delivery.DeliveryFragment"
        android:label="@string/title_delivery"
        tools:layout="@layout/fragment_delivery" />

    <fragment
        android:id="@+id/navigation_documents"
        android:name="com.lfsolutions.retail.ui.documents.DocumentsFragment"
        android:label="@string/title_Documents"
        tools:layout="@layout/fragment_documents" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.lfsolutions.retail.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_all_records"
        android:name="com.lfsolutions.retail.ui.allrecords.AllRecordsFragment"
        android:label="@string/title_all_records"
        tools:layout="@layout/fragment_schedule" />

</navigation>