<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.lfsolutions.retail.ui.widgets.HeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_printer_blutooth" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="Please make sure your bluetooth is turned and your printer is paired with your phone.\n\nPlease tap here to open bluetooth settings."
            android:textColor="?attr/secondaryTextColor"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/printerSettingsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_printer"
            android:textColor="#000000" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/printers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background"
            android:entries="@array/printers"
            android:padding="3dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/paper_width"
            android:textColor="#000000" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background"
            android:entries="@array/paperWidth"
            android:padding="3dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/character_per_line"
            android:textColor="#000000" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/characters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/slight_rounded_corner_white_background_black_stroke"
            android:gravity="center"
            android:inputType="number"
            android:padding="5dp"
            android:text="48" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/testPrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/test_print" />

    </LinearLayout>

</RelativeLayout>