<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="?attr/secondary"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/confirm_selection"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/customers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomButtons"
        android:layout_below="@+id/title"
        android:background="@color/white"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_scheduled" />

    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/secondary"
        android:gravity="end|center_vertical"
        android:orientation="vertical"
        android:weightSum="2">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="?attr/secondary"
            android:gravity="end|center_vertical"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:elevation="5dp"
                android:text="@string/label_cancel"
                android:textColor="@color/gray" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:backgroundTint="?attr/primary"
                android:elevation="5dp"
                android:text="@string/label_confirm"
                android:textColor="@color/black" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>
</RelativeLayout>