<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.lfsolutions.retail.ui.HeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/sandal"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/cardPriceInfo"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:listitem="@layout/item_equipment" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPriceInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblQTY"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_quantity"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtQTY"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="16sp" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flowSubTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="lblQTY,txtQTY"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblGST"
                android:layout_width="0dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:text="@string/label_add_gst_7"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtGST"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="$ 23.45"
                android:visibility="gone"
                android:textAlignment="textEnd"
                android:textSize="16sp" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flowGST"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="lblGST,txtGST"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintTop_toBottomOf="@+id/flowSubTotal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_total"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="$ 122.75"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flowTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:constraint_referenced_ids="lblTotal,txtTotal"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintTop_toBottomOf="@+id/flowGST" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@+id/flowTotal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_white_background"
                    android:text="@string/label_clear" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnComplete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_yellow_background"
                    android:text="@string/label_complete" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>