<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/yellow"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icoBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back_black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_add_to_cart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="icoBack,txtBack"
                app:flow_horizontalGap="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/account_circle_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Area Supervisor"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtVehicleNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prefix_vehicle_no"
                android:textSize="14sp" />

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                app:constraint_referenced_ids="txtName,txtRole,txtVehicleNo"
                app:flow_horizontalAlign="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/icoAccount"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgProduct"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="15dp"
        android:src="@drawable/no_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHeader" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Product Name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Category"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="$10"
        android:textSize="16sp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowProductInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="txtProductName,txtCategory,txtPrice"
        app:flow_horizontalAlign="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgProduct"
        app:layout_constraintTop_toTopOf="@id/imgProduct" />

    <LinearLayout
        android:id="@+id/qtyLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_gray_background"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/flowProductInfo"
        app:layout_constraintTop_toBottomOf="@+id/flowProductInfo">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_yellow_background"
            android:padding="5dp"
            android:src="@drawable/minus_black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtQty"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="1"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_yellow_background"
            android:padding="5dp"
            android:src="@drawable/add_black" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="imgProduct,qtyLayout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSaleOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="Sale Option"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/txtSaleOption">

        <CheckBox
            android:id="@+id/checkboxFOC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_foc" />

        <CheckBox
            android:id="@+id/checkboxRent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_rent" />

        <CheckBox
            android:id="@+id/checkboxExchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_exchange" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/label_add"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>